--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "next": "13.4.10",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
