--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
