--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.10.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@types/formidable": "^3.4.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -21,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "formidable": "^3.5.0",
     "lucide-react": "^0.262.0",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
