--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@types/crypto-js": "^4.1.2",
     "@types/formidable": "^3.4.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
@@ -32,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "formidable": "^3.5.0",
     "lucide-react": "^0.262.0",
     "next": "13.4.10",
